@@ -1,51 +1,63 @@
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
+import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mojang.brigadier.builder.RequiredArgumentBuilder;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import java.util.Collection;
+import java.util.List;
 
 public class apu {
+   private static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(xa.c("commands.transfer.error.no_players"));
+
    public static void a(CommandDispatcher<ej> $$0) {
       $$0.register(
-         (LiteralArgumentBuilder)((LiteralArgumentBuilder)((LiteralArgumentBuilder)ek.a("warden_spawn_tracker").requires($$0x -> $$0x.c(2)))
-               .then(ek.a("clear").executes($$0x -> a((ej)$$0x.getSource(), ImmutableList.of(((ej)$$0x.getSource()).h())))))
+         (LiteralArgumentBuilder)((LiteralArgumentBuilder)ek.a("transfer").requires($$0x -> $$0x.c(3)))
             .then(
-               ek.a("set")
+               ((RequiredArgumentBuilder)ek.a("hostname", StringArgumentType.string())
+                     .executes($$0x -> a((ej)$$0x.getSource(), StringArgumentType.getString($$0x, "hostname"), 25565, List.of(((ej)$$0x.getSource()).h()))))
                   .then(
-                     ek.a("warning_level", IntegerArgumentType.integer(0, 4))
-                        .executes(
-                           $$0x -> a((ej)$$0x.getSource(), ImmutableList.of(((ej)$$0x.getSource()).h()), IntegerArgumentType.getInteger($$0x, "warning_level"))
+                     ((RequiredArgumentBuilder)ek.a("port", IntegerArgumentType.integer(1, 65535))
+                           .executes(
+                              $$0x -> a(
+                                    (ej)$$0x.getSource(),
+                                    StringArgumentType.getString($$0x, "hostname"),
+                                    IntegerArgumentType.getInteger($$0x, "port"),
+                                    List.of(((ej)$$0x.getSource()).h())
+                                 )
+                           ))
+                        .then(
+                           ek.a("players", ew.d())
+                              .executes(
+                                 $$0x -> a(
+                                       (ej)$$0x.getSource(),
+                                       StringArgumentType.getString($$0x, "hostname"),
+                                       IntegerArgumentType.getInteger($$0x, "port"),
+                                       ew.f($$0x, "players")
+                                    )
+                              )
                         )
                   )
             )
       );
    }
 
-   private static int a(ej $$0, Collection<? extends crm> $$1, int $$2) {
-      for (crm $$3 : $$1) {
-         $$3.Z().ifPresent($$1x -> $$1x.a($$2));
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> wy.a("commands.warden_spawn_tracker.set.success.single", $$1.iterator().next().m_()), true);
+   private static int a(ej $$0, String $$1, int $$2, Collection<art> $$3) throws CommandSyntaxException {
+      if ($$3.isEmpty()) {
+         throw a.create();
       } else {
-         $$0.a(() -> wy.a("commands.warden_spawn_tracker.set.success.multiple", $$1.size()), true);
+         for (art $$4 : $$3) {
+            $$4.f.b(new zx($$1, $$2));
+         }
+
+         if ($$3.size() == 1) {
+            $$0.a(() -> xa.a("commands.transfer.success.single", $$3.iterator().next().m_(), $$1, $$2), true);
+         } else {
+            $$0.a(() -> xa.a("commands.transfer.success.multiple", $$3.size(), $$1, $$2), true);
+         }
+
+         return $$3.size();
       }
-
-      return $$1.size();
-   }
-
-   private static int a(ej $$0, Collection<? extends crm> $$1) {
-      for (crm $$2 : $$1) {
-         $$2.Z().ifPresent(cqr::b);
-      }
-
-      if ($$1.size() == 1) {
-         $$0.a(() -> wy.a("commands.warden_spawn_tracker.clear.success.single", $$1.iterator().next().m_()), true);
-      } else {
-         $$0.a(() -> wy.a("commands.warden_spawn_tracker.clear.success.multiple", $$1.size()), true);
-      }
-
-      return $$1.size();
    }
 }
